--- a/_sass/pages/_work-page.scss
+++ b/_sass/pages/_work-page.scss
@@ -184,7 +184,7 @@
 }
 
 .list-of-works details summary {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 1.05rem;
   color: var(--text-color);
   list-style: none;
@@ -210,7 +210,7 @@
   transform: rotate(90deg);
 }
 
-.list-of-works details>*:not(summary) {
+.list-of-works details > *:not(summary) {
   color: var(--text-accent);
   font-size: 0.95rem;
   line-height: 1.5;
